# playlistPlayer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Defs.h  main.cpp
src/controller/inc/: PlaylistListController.h
src/controller/src/: PlaylistListController.cpp
src/facade/inc/: AppFacade.h
src/facade/src/: AppFacade.cpp
src/model/inc/: PlaylistModel.h
src/model/src/: PlaylistModel.cpp
src/view/inc/: PlaylistListView.h
src/view/src/: PlaylistListView.cpp
